Adding the new info on the report and presentation

--- a/LCA/cyclopentanone_olive_kernel_lca_report.org
+++ b/LCA/cyclopentanone_olive_kernel_lca_report.org
@@ -226,12 +226,26 @@ Having seen the LCIA of our process, we can now compare it with the petrelaic pr
 
 We see that our process significantly outperforms the petrelaic one in all sectors besides water usage and that even in the worst scenario included in our uncertainty analysis, this conclusion does not change.
 
+** Scenario with Water Reuse
+Since we saw that water usage is the major problem of the process, we decided to investigate whether or not it is worth to integrate a refrigerator cycle in the process. Its use will be to cover the cooling needs of the distillation columns (which was shown to have the most impact in water usage) but using water that is in the refrigerator cycle and thus not consumed. This will significantly lower the water usage needs. Depending on the design, it might increase energy needs, due to the electricity needed to run the cycle, but by integrating the distillation columns in the cycle, it might decrease the total energy demand. And even if it increases, this area is not the worst part about the proposed process. Below is a graph showing the comparative LCIA of the two processes.
+
+#+CAPTION: Comparative LCIA of the process with and without water reuse
+#+ATTR_ORG: :width 600px
+[[./lcia_comparison_reuse.png]]
+
+It can be seen that water usage becomes 0.4 of its original value, while the carbon footprint, energy demand and human toxicity are slightly reduced, indicating that environmentally, this integration is worth the effort. However, there are some important tradeoffs. Firstly, the energy demand seems lower, but we need energy of higher quality in this equilibrium (electricity instead of heat), which may make the process more expensive. However, due to the assumption we are working under that the plant has a cogeneration system using the lignin of the olive kernel, we can safely assume that the electricity necessary is equivalently available to the heat. This will however lower the income of the plant, which will be able to sell less electricity as a co-product. Moreover, investing in this refrigeration cycle will have a cost for the equipment and especially the compressor of the process, which is an expensive piece of equipment. Due to these two economic concerns, a techno-economic analysis would need to be done to judge whether the decreased environmental impact makes up for the increased cost, but it definitely looks like an interesting proposal.
+
+*** Reusing the other cooling water
+Besides the cooling water of the distillation columns, the other water usage that could be saved with reuse is the cooling right after the reactors. Due to this cooling being at a lower temperature (30 \( ^oC \)), it is more troublesome. The first thought is to try and integrate this stream in the above refrigerating cycle. To do this however, we need a different material for cooling as water cannot achieve such a wide range. The easiest option is \( CH_3Cl \), which would allow us to lower water usage further. However, chloromethane is a health and environmental hazard and we believe that it will be environmentally taxing to change water in our cycle with chloromethane if the goal is to reduce the environmental impacts.
+
+The other option is to use a second refrigerator cycle for this and use the R-134 refrigerant. It is less toxic that chloromethane, but has a higher environmental impact than water. Furthermore, introducing a second refrigerator cycle starts making the economic problems more adverse. A second compressor is necessary and even more energy will need to be supplied to the process. We studied this scenario and found that it was feasible, however, we believe that its economic impact combined with that of the above cycle is almost certain to push our process in a more unfavourable range.
+
 * Conclusions
 We conclude that the proposed process is an environmentally friendly process for producing cyclopentanone from a waste material (olive kernel), which can effectively replace cyclopentanone production from adipic acid, which is very bad both for the environment and for the health of anyone in the factory producing that material.
 
 Furthermore, due to the sensitivity and hot spot analysis performed, we can also assess how the process can be improved.
 
-The biggest problem of the process is water usage. Improving the water usage isn't so easy, as half of the water needs are for cooling inside which is hard to decrease. From the ones we can control, the process is 5 times more sensitive to the cooling of the distillation column than the steam needed for the steam explosion. However, this is not very significant. The best way to decrease water usage is via optimization of water usage with Pinch point analysis or water reuse.
+The biggest problem of the process is water usage. The scenario mentioned above including the refrigeration cycle solves this to an extent. Further integration attempts for other cooling needs of the process, may help even further, so despite this increasing the cost of the process, it is definitely the way forward for decreasing the process water usage.
 
 The second most important parameter is decreasing the amount of olive kernel necessary for the process as it will help in almost all impacts. It is the hot spot of the carbon footprint and human toxicity and plays a role in energy demand and eutrophication potential of the process. The process is not so sensitive to this change as it is to others, but the extraction of xylose from the kernel is highly inefficient and improving that process has potential to significantly decrease the olive kernel requirements and as such lower these impacts.
 
