Finalizing something in the presentation files

--- a/LCA/cyclopentanone_olive_kernel_lca_report.org
+++ b/LCA/cyclopentanone_olive_kernel_lca_report.org
@@ -236,7 +236,7 @@ Since we saw that water usage is the major problem of the process, we decided to
 It can be seen that water usage becomes 0.4 of its original value, while the carbon footprint, energy demand and human toxicity are slightly reduced, indicating that environmentally, this integration is worth the effort. However, there are some important tradeoffs. Firstly, the energy demand seems lower, but we need energy of higher quality in this equilibrium (electricity instead of heat), which may make the process more expensive. However, due to the assumption we are working under that the plant has a cogeneration system using the lignin of the olive kernel, we can safely assume that the electricity necessary is equivalently available to the heat. This will however lower the income of the plant, which will be able to sell less electricity as a co-product. Moreover, investing in this refrigeration cycle will have a cost for the equipment and especially the compressor of the process, which is an expensive piece of equipment. Due to these two economic concerns, a techno-economic analysis would need to be done to judge whether the decreased environmental impact makes up for the increased cost, but it definitely looks like an interesting proposal.
 
 *** Reusing the other cooling water
-Besides the cooling water of the distillation columns, the other water usage that could be saved with reuse is the cooling right after the reactors. Due to this cooling being at a lower temperature (30 \( ^oC \)), it is more troublesome. The first thought is to try and integrate this stream in the above refrigerating cycle. To do this however, we need a different material for cooling as water cannot achieve such a wide range. The easiest option is \( CH_3Cl \), which would allow us to lower water usage further. However, chloromethane is a health and environmental hazard and we believe that it will be environmentally taxing to change water in our cycle with chloromethane if the goal is to reduce the environmental impacts.
+Besides the cooling water of the distillation columns, the other water usage that could be saved with reuse is the cooling right after the reactors. Due to this cooling being at a lower temperature (30 \( ^oC \)), it would force the evaporator temperature to be very low, which makes the usage of water hard. The first thought is to try and integrate this stream in the above refrigerating cycle. To do this however, we need a different material for cooling as water cannot achieve such a wide range. The easiest option is \( CH_3Cl \), which would allow us to lower water usage further. However, chloromethane is a health and environmental hazard and we believe that it will be environmentally taxing to change water in our cycle with chloromethane if the goal is to reduce the environmental impacts.
 
 The other option is to use a second refrigerator cycle for this and use the R-134 refrigerant. It is less toxic that chloromethane, but has a higher environmental impact than water. Furthermore, introducing a second refrigerator cycle starts making the economic problems more adverse. A second compressor is necessary and even more energy will need to be supplied to the process. We studied this scenario and found that it was feasible, however, we believe that its economic impact combined with that of the above cycle is almost certain to push our process in a more unfavourable range.
 
